# Antonia_Lab_Assistant

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml  requirements.txt  ruff.toml
antonia_project/: .gitignore  requirements.txt  setup_models.py
antonia_project/config/: ModelFile  system_prompt.txt
antonia_project/knowledge_base/: phonetic_map.json
antonia_project/llm/: llm_test.py  test_stt_llm_tts.py
antonia_project/modules/stt/: antonia_core.py  antonia_stt.py  stt_module.py  whisper_test.py
antonia_project/modules/tts/: tts_module.py
antonia_project/tests/: audio_test.py  test_stt_llm_pipeline.py  whisper_test.py
config/prompts/: laboratory.yaml
docker/: docker-compose.jetson.yml  docker-compose.override.yml  docker-compose.yml
knowledge_base/: phonetic_map.yaml
scripts/: download_models.py
src/antonia/: __init__.py  factory.py
src/antonia/audio/: __init__.py  capture.py  dsp.py  listener.py  vad.py
src/antonia/config/: __init__.py  settings.py
src/antonia/domain/: __init__.py  knowledge.py  prompt.py  utterance.py
src/antonia/infra/: health.py  logging.py  memory.py
src/antonia/kb/: __init__.py  store.py
src/antonia/llm/: __init__.py  backend.py  mock.py  ollama.py
src/antonia/pipeline/: __init__.py  context.py  orchestrator.py  relay.py
src/antonia/scripts/: benchmark.py  ingest_kb.py  run_antonia.py
src/antonia/stt/: __init__.py  backend.py  mock.py  whisper.py
src/antonia/tts/: __init__.py  backend.py  (+5 more)
tests/: conftest.py
tests/integration/: test_ollama_live.py  test_pipeline_mock.py
tests/unit/: test_dsp.py  test_prompt.py  test_retriever.py  test_sentence_buffer.py
(+9 files in other folders)
